compiler/decafParser.cpp

// Generated from decaf.g4 by ANTLR 4.7.2


#include "decafListener.h"

#include "decafParser.h"


using namespace antlrcpp;
using namespace antlr4;

decafParser::decafParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

decafParser::~decafParser() {
  delete _interpreter;
}

std::string decafParser::getGrammarFileName() const {
  return "decaf.g4";
}

const std::vector<std::string>& decafParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& decafParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

decafParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<decafParser::DeclarationContext *> decafParser::ProgramContext::declaration() {
  return getRuleContexts<decafParser::DeclarationContext>();
}

decafParser::DeclarationContext* decafParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<decafParser::DeclarationContext>(i);
}


size_t decafParser::ProgramContext::getRuleIndex() const {
  return decafParser::RuleProgram;
}

void decafParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void decafParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

decafParser::ProgramContext* decafParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, decafParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(decafParser::T__0);
    setState(39);
    match(decafParser::T__1);
    setState(40);
    match(decafParser::T__2);
    setState(44);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << decafParser::T__7)
      | (1ULL << decafParser::T__8)
      | (1ULL << decafParser::T__9)
      | (1ULL << decafParser::T__10)
      | (1ULL << decafParser::T__11))) != 0)) {
      setState(41);
      declaration();
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(47);
    match(decafParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

decafParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

decafParser::VarDeclarationContext* decafParser::DeclarationContext::varDeclaration() {
  return getRuleContext<decafParser::VarDeclarationContext>(0);
}

decafParser::StructDeclarationContext* decafParser::DeclarationContext::structDeclaration() {
  return getRuleContext<decafParser::StructDeclarationContext>(0);
}

decafParser::MethodDeclarationContext* decafParser::DeclarationContext::methodDeclaration() {
  return getRuleContext<decafParser::MethodDeclarationContext>(0);
}


size_t decafParser::DeclarationContext::getRuleIndex() const {
  return decafParser::RuleDeclaration;
}

void decafParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void decafParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}

decafParser::DeclarationContext* decafParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, decafParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(52);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(49);
      varDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(50);
      structDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(51);
      methodDeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationContext ------------------------------------------------------------------

decafParser::VarDeclarationContext::VarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t decafParser::VarDeclarationContext::getRuleIndex() const {
  return decafParser::RuleVarDeclaration;
}

void decafParser::VarDeclarationContext::copyFrom(VarDeclarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ArrayDeclarationContext ------------------------------------------------------------------

decafParser::VarTypeContext* decafParser::ArrayDeclarationContext::varType() {
  return getRuleContext<decafParser::VarTypeContext>(0);
}

tree::TerminalNode* decafParser::ArrayDeclarationContext::ID() {
  return getToken(decafParser::ID, 0);
}

tree::TerminalNode* decafParser::ArrayDeclarationContext::NUM() {
  return getToken(decafParser::NUM, 0);
}

decafParser::ArrayDeclarationContext::ArrayDeclarationContext(VarDeclarationContext *ctx) { copyFrom(ctx); }

void decafParser::ArrayDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayDeclaration(this);
}
void decafParser::ArrayDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayDeclaration(this);
}
//----------------- VariableDeclarationContext ------------------------------------------------------------------

decafParser::VarTypeContext* decafParser::VariableDeclarationContext::varType() {
  return getRuleContext<decafParser::VarTypeContext>(0);
}

tree::TerminalNode* decafParser::VariableDeclarationContext::ID() {
  return getToken(decafParser::ID, 0);
}

decafParser::VariableDeclarationContext::VariableDeclarationContext(VarDeclarationContext *ctx) { copyFrom(ctx); }

void decafParser::VariableDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDeclaration(this);
}
void decafParser::VariableDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDeclaration(this);
}
decafParser::VarDeclarationContext* decafParser::varDeclaration() {
  VarDeclarationContext *_localctx = _tracker.createInstance<VarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, decafParser::RuleVarDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VarDeclarationContext *>(_tracker.createInstance<decafParser::VariableDeclarationContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(54);
      varType();
      setState(55);
      match(decafParser::ID);
      setState(56);
      match(decafParser::T__4);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VarDeclarationContext *>(_tracker.createInstance<decafParser::ArrayDeclarationContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(58);
      varType();
      setState(59);
      match(decafParser::ID);
      setState(60);
      match(decafParser::T__5);
      setState(61);
      match(decafParser::NUM);
      setState(62);
      match(decafParser::T__6);
      setState(63);
      match(decafParser::T__4);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructDeclarationContext ------------------------------------------------------------------

decafParser::StructDeclarationContext::StructDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* decafParser::StructDeclarationContext::ID() {
  return getToken(decafParser::ID, 0);
}

std::vector<decafParser::VarDeclarationContext *> decafParser::StructDeclarationContext::varDeclaration() {
  return getRuleContexts<decafParser::VarDeclarationContext>();
}

decafParser::VarDeclarationContext* decafParser::StructDeclarationContext::varDeclaration(size_t i) {
  return getRuleContext<decafParser::VarDeclarationContext>(i);
}


size_t decafParser::StructDeclarationContext::getRuleIndex() const {
  return decafParser::RuleStructDeclaration;
}

void decafParser::StructDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStructDeclaration(this);
}

void decafParser::StructDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStructDeclaration(this);
}

decafParser::StructDeclarationContext* decafParser::structDeclaration() {
  StructDeclarationContext *_localctx = _tracker.createInstance<StructDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, decafParser::RuleStructDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(67);
      match(decafParser::T__7);
      setState(68);
      match(decafParser::ID);
      setState(69);
      match(decafParser::T__2);
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << decafParser::T__7)
        | (1ULL << decafParser::T__8)
        | (1ULL << decafParser::T__9)
        | (1ULL << decafParser::T__10)
        | (1ULL << decafParser::T__11))) != 0)) {
        setState(70);
        varDeclaration();
        setState(75);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(76);
      match(decafParser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(77);
      match(decafParser::T__7);
      setState(78);
      match(decafParser::ID);
      setState(79);
      match(decafParser::T__2);
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << decafParser::T__7)
        | (1ULL << decafParser::T__8)
        | (1ULL << decafParser::T__9)
        | (1ULL << decafParser::T__10)
        | (1ULL << decafParser::T__11))) != 0)) {
        setState(80);
        varDeclaration();
        setState(85);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(86);
      match(decafParser::T__3);
      setState(87);
      match(decafParser::T__4);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarTypeContext ------------------------------------------------------------------

decafParser::VarTypeContext::VarTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* decafParser::VarTypeContext::ID() {
  return getToken(decafParser::ID, 0);
}

decafParser::StructDeclarationContext* decafParser::VarTypeContext::structDeclaration() {
  return getRuleContext<decafParser::StructDeclarationContext>(0);
}


size_t decafParser::VarTypeContext::getRuleIndex() const {
  return decafParser::RuleVarType;
}

void decafParser::VarTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarType(this);
}

void decafParser::VarTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarType(this);
}

decafParser::VarTypeContext* decafParser::varType() {
  VarTypeContext *_localctx = _tracker.createInstance<VarTypeContext>(_ctx, getState());
  enterRule(_localctx, 8, decafParser::RuleVarType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(90);
      match(decafParser::T__8);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(91);
      match(decafParser::T__9);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(92);
      match(decafParser::T__10);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(93);
      match(decafParser::T__7);
      setState(94);
      match(decafParser::ID);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(95);
      structDeclaration();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(96);
      match(decafParser::T__11);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodDeclarationContext ------------------------------------------------------------------

decafParser::MethodDeclarationContext::MethodDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

decafParser::MethodTypeContext* decafParser::MethodDeclarationContext::methodType() {
  return getRuleContext<decafParser::MethodTypeContext>(0);
}

tree::TerminalNode* decafParser::MethodDeclarationContext::ID() {
  return getToken(decafParser::ID, 0);
}

decafParser::BlockContext* decafParser::MethodDeclarationContext::block() {
  return getRuleContext<decafParser::BlockContext>(0);
}

std::vector<decafParser::ParameterContext *> decafParser::MethodDeclarationContext::parameter() {
  return getRuleContexts<decafParser::ParameterContext>();
}

decafParser::ParameterContext* decafParser::MethodDeclarationContext::parameter(size_t i) {
  return getRuleContext<decafParser::ParameterContext>(i);
}


size_t decafParser::MethodDeclarationContext::getRuleIndex() const {
  return decafParser::RuleMethodDeclaration;
}

void decafParser::MethodDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethodDeclaration(this);
}

void decafParser::MethodDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethodDeclaration(this);
}

decafParser::MethodDeclarationContext* decafParser::methodDeclaration() {
  MethodDeclarationContext *_localctx = _tracker.createInstance<MethodDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, decafParser::RuleMethodDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    methodType();
    setState(100);
    match(decafParser::ID);
    setState(101);
    match(decafParser::T__12);
    setState(110);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << decafParser::T__8)
      | (1ULL << decafParser::T__9)
      | (1ULL << decafParser::T__10))) != 0)) {
      setState(102);
      parameter();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == decafParser::T__13) {
        setState(103);
        match(decafParser::T__13);
        setState(104);
        parameter();
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(112);
    match(decafParser::T__14);
    setState(113);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodTypeContext ------------------------------------------------------------------

decafParser::MethodTypeContext::MethodTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t decafParser::MethodTypeContext::getRuleIndex() const {
  return decafParser::RuleMethodType;
}

void decafParser::MethodTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethodType(this);
}

void decafParser::MethodTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethodType(this);
}

decafParser::MethodTypeContext* decafParser::methodType() {
  MethodTypeContext *_localctx = _tracker.createInstance<MethodTypeContext>(_ctx, getState());
  enterRule(_localctx, 12, decafParser::RuleMethodType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << decafParser::T__8)
      | (1ULL << decafParser::T__9)
      | (1ULL << decafParser::T__10)
      | (1ULL << decafParser::T__11))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

decafParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t decafParser::ParameterContext::getRuleIndex() const {
  return decafParser::RuleParameter;
}

void decafParser::ParameterContext::copyFrom(ParameterContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParameterArrayContext ------------------------------------------------------------------

decafParser::ParameterTypeContext* decafParser::ParameterArrayContext::parameterType() {
  return getRuleContext<decafParser::ParameterTypeContext>(0);
}

tree::TerminalNode* decafParser::ParameterArrayContext::ID() {
  return getToken(decafParser::ID, 0);
}

decafParser::ParameterArrayContext::ParameterArrayContext(ParameterContext *ctx) { copyFrom(ctx); }

void decafParser::ParameterArrayContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterArray(this);
}
void decafParser::ParameterArrayContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterArray(this);
}
//----------------- ParameterVariableContext ------------------------------------------------------------------

decafParser::ParameterTypeContext* decafParser::ParameterVariableContext::parameterType() {
  return getRuleContext<decafParser::ParameterTypeContext>(0);
}

tree::TerminalNode* decafParser::ParameterVariableContext::ID() {
  return getToken(decafParser::ID, 0);
}

decafParser::ParameterVariableContext::ParameterVariableContext(ParameterContext *ctx) { copyFrom(ctx); }

void decafParser::ParameterVariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterVariable(this);
}
void decafParser::ParameterVariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterVariable(this);
}
decafParser::ParameterContext* decafParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 14, decafParser::RuleParameter);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(125);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ParameterContext *>(_tracker.createInstance<decafParser::ParameterVariableContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(117);
      parameterType();
      setState(118);
      match(decafParser::ID);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ParameterContext *>(_tracker.createInstance<decafParser::ParameterArrayContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(120);
      parameterType();
      setState(121);
      match(decafParser::ID);
      setState(122);
      match(decafParser::T__5);
      setState(123);
      match(decafParser::T__6);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterTypeContext ------------------------------------------------------------------

decafParser::ParameterTypeContext::ParameterTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t decafParser::ParameterTypeContext::getRuleIndex() const {
  return decafParser::RuleParameterType;
}

void decafParser::ParameterTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterType(this);
}

void decafParser::ParameterTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterType(this);
}

decafParser::ParameterTypeContext* decafParser::parameterType() {
  ParameterTypeContext *_localctx = _tracker.createInstance<ParameterTypeContext>(_ctx, getState());
  enterRule(_localctx, 16, decafParser::RuleParameterType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << decafParser::T__8)
      | (1ULL << decafParser::T__9)
      | (1ULL << decafParser::T__10))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

decafParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<decafParser::VarDeclarationContext *> decafParser::BlockContext::varDeclaration() {
  return getRuleContexts<decafParser::VarDeclarationContext>();
}

decafParser::VarDeclarationContext* decafParser::BlockContext::varDeclaration(size_t i) {
  return getRuleContext<decafParser::VarDeclarationContext>(i);
}

std::vector<decafParser::StatementContext *> decafParser::BlockContext::statement() {
  return getRuleContexts<decafParser::StatementContext>();
}

decafParser::StatementContext* decafParser::BlockContext::statement(size_t i) {
  return getRuleContext<decafParser::StatementContext>(i);
}


size_t decafParser::BlockContext::getRuleIndex() const {
  return decafParser::RuleBlock;
}

void decafParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void decafParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

decafParser::BlockContext* decafParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 18, decafParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    match(decafParser::T__2);
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << decafParser::T__2)
      | (1ULL << decafParser::T__4)
      | (1ULL << decafParser::T__7)
      | (1ULL << decafParser::T__8)
      | (1ULL << decafParser::T__9)
      | (1ULL << decafParser::T__10)
      | (1ULL << decafParser::T__11)
      | (1ULL << decafParser::T__12)
      | (1ULL << decafParser::T__15)
      | (1ULL << decafParser::T__17)
      | (1ULL << decafParser::T__18)
      | (1ULL << decafParser::T__25)
      | (1ULL << decafParser::T__34)
      | (1ULL << decafParser::T__35)
      | (1ULL << decafParser::T__36)
      | (1ULL << decafParser::ID)
      | (1ULL << decafParser::NUM)
      | (1ULL << decafParser::CHAR))) != 0)) {
      setState(132);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case decafParser::T__7:
        case decafParser::T__8:
        case decafParser::T__9:
        case decafParser::T__10:
        case decafParser::T__11: {
          setState(130);
          varDeclaration();
          break;
        }

        case decafParser::T__2:
        case decafParser::T__4:
        case decafParser::T__12:
        case decafParser::T__15:
        case decafParser::T__17:
        case decafParser::T__18:
        case decafParser::T__25:
        case decafParser::T__34:
        case decafParser::T__35:
        case decafParser::T__36:
        case decafParser::ID:
        case decafParser::NUM:
        case decafParser::CHAR: {
          setState(131);
          statement();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(137);
    match(decafParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

decafParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t decafParser::StatementContext::getRuleIndex() const {
  return decafParser::RuleStatement;
}

void decafParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- WhileStatementContext ------------------------------------------------------------------

decafParser::ExpressionContext* decafParser::WhileStatementContext::expression() {
  return getRuleContext<decafParser::ExpressionContext>(0);
}

decafParser::BlockContext* decafParser::WhileStatementContext::block() {
  return getRuleContext<decafParser::BlockContext>(0);
}

decafParser::WhileStatementContext::WhileStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void decafParser::WhileStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileStatement(this);
}
void decafParser::WhileStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<decafListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileStatement(this);
}
//----------------- BlockStatementContext ------------------------------------------------------------------

decafParser::BlockContext* decafParser::BlockStatementContext::block() {
  return getRuleContext<decafParser::BlockContext>(0);
}

decafParser::BlockStatementContext::BlockStatementContext(StatementContext *ctx) { copyFrom(ctx); }
